# HTTP-Server

./: .gitignore  Makefile  docker-compose.yaml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/displayable_exceptions/: displayable_exception.py
backend/scripts/: reformat.sh  run.sh  sync.sh
backend/src/: main.py
backend/src/displayable_exceptions/: displayable_exception.py
backend/src/requests/: exceptions.py  request.py  schema.py
backend/src/server/: __main__.py  core.py  http_server.py  tcp_server.py
backend/src/templates/: get_request.html
