[project]
name = "http-server"
version = "0.0.0"
authors = [
    { name = "Afonso Bernardes" }
]
description = "Simple HTTP server implemented in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# required according to PEP 518,
# specifying the minimum dependencies needed to build the project and defining the build backend used for packaging
[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]

[tool.uv.extra-build-dependencies]
http-server = ["setuptools"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
extend_skip_glob = ".venv*"
